--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^3.0.2",
     "builtinmodules": "^1.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongo": "^0.1.0",
     "mongoose": "^8.12.1",
@@ -11,7 +12,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
